authhelper: use single field for user name in BBA
Skip further filtering when the login page has a single displayed
field, as in that case it should be the user name.

Signed-off-by: thc202 <thc202@gmail.com>